<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_share_bill"
        android:icon="@drawable/ic_share_24"
        android:title="@string/action_share"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_print_bill"
        android:icon="@drawable/ic_print"
        android:title="@string/action_print"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_download_bill"
        android:icon="@drawable/ic_file_download"
        android:title="@string/action_download"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />
</menu>
